# School21-ft_ls

./: 1  CMakeLists.txt  Makefile  author  ft_ls  text
ft_ls.dSYM/Contents/Resources/DWARF/: ft_ls
ft_printf/: Makefile
ft_printf/src/: ft_free_strncpy.c
includes/: ft_ls.h  libft.h
libft/: Makefile  ft_isdigonly.c  ft_memccpy.c  ft_strcmp.c  ft_strdup.c  ft_strncpy.c  get_next_line.c
libft/includes/: libft.h
src/: alph_sort.c  atime_sort.c  choise_flag.c  create_list.c  error.c  error2.c  flag_choose.c  flag_print.c  flag_return.c  free.c  main.c  mektus_func.c  new_strjoin.c  par_sort_list.c  par_sort_list2.c  param_atime_sort.c  param_flag_choose.c  param_func.c  param_sort.c  param_time_sort.c  print.c  sort_list.c  sort_list2.c  time_sort.c  usual_ls.c  vanilla_ls.c
